Update URLs copied to clipboard if they change as a result of KIO operations.

BUG: 134960
CCBUG: 318757
FIXED-IN: 4.11
REVIEW: 111776